plugins {
    id 'com.github.johnrengelman.shadow' version '1.2.3'
    id 'application'
    id 'java'
}

group 'minn'
version '1.0'


//noinspection GroovyUnusedAssignment
mainClassName="minn.music.Main"
compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 1.8

repositories {
    jcenter()
}

dependencies {
    compile 'net.dv8tion:JDA:2.1.2_324'
    //compile fileTree(dir: 'libs', include: '*.jar')
    compile 'net.dv8tion:jda-player:0.2.1_9'
}
